crates/apollo-compiler/test_data/diagnostics/0087_fragment_type_condition_on_composite_types.txt
Error: field selection of scalar type `Int` must not have subselections
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:5:5]
   │
 5 │     price { ...fragOnScalar }
   │     ────────────┬────────────  
   │                 ╰────────────── remove subselections here
   │ 
   │ Note: path to the field: `query Query → products → price`
───╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:8:7]
     │
   8 │       name
     │       ──┬─  
     │         ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `query Query → products → name`
─────╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:22:3]
     │
  22 │   name
     │   ──┬─  
     │     ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `fragment fragOnScalar → name`
─────╯
Error: type `Int` does not have a field `name`
     ╭─[0087_fragment_type_condition_on_composite_types.graphql:27:5]
     │
  27 │     name
     │     ──┬─  
     │       ╰─── field `name` selected here
     │
     ├─[built_in.graphql:129:8]
     │
 129 │ scalar Int
     │        ─┬─  
     │         ╰─── type `Int` defined here
     │ 
     │ Note: path to the field: `fragment inlineFragOnScalar → name`
─────╯
Error: fragment cannot be applied to this type
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:5:13]
    │
  5 │         price { ...fragOnScalar }
    │                 ───────┬───────  
    │                        ╰───────── fragment `fragOnScalar` cannot be applied
    │ 
 21 │ ╭─▶ fragment fragOnScalar on Int {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── fragment declared with type condition `Int` here
────╯
Error: fragments can not be declared on primitive types
   ╭─[0087_fragment_type_condition_on_composite_types.graphql:7:5]
   │
 7 │ ╭─▶     ... on Int {
   ┆ ┆   
 9 │ ├─▶     }
   │ │           
   │ ╰─────────── fragment declares unsupported type condition `Int`
   │     
   │     Help: fragments cannot be defined on enums, scalars and input objects
───╯
Error: fragments can not be declared on primitive types
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:21:1]
    │
 21 │ ╭─▶ fragment fragOnScalar on Int {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── fragment declares unsupported type condition `Int`
    │     
    │     Help: fragments cannot be defined on enums, scalars and input objects
────╯
Error: fragments can not be declared on primitive types
    ╭─[0087_fragment_type_condition_on_composite_types.graphql:26:3]
    │
 26 │ ╭─▶   ... on Int {
    ┆ ┆   
 28 │ ├─▶   }
    │ │         
    │ ╰───────── fragment declares unsupported type condition `Int`
    │     
    │     Help: fragments cannot be defined on enums, scalars and input objects
────╯

